Se agrga paginan de Notas

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <li><a href="discusion.html">Discusi&oacute;n</a></li>
                 <li><a href="leer.html">Leer</a></li>
                 <li><a href="editar.html">Editar</a></li>
-                <li><a href="editar-codigo.html">Editar-codigos</a></li>
+                
+                <li><a href="notas.html">Notas adicionales</a></li>
 	    	</ul>
         </nav>
     </header><!-- Fin Header -->
